# vision-coder-openenv

./: .gitignore  CLAUDE.md  Dockerfile  README.md  __init__.py  benchmark.py  blog.md  client.py  conftest.py  env.md  eval_lora.py  extension_plan.md  inference.py  models.py  openenv.yaml  progress.md  pyproject.toml  requirements.txt  run_benchmark.py  run_eval.py  run_final.py  run_hard_remaining.py  run_qwen_eval.py  train.py  train_colab.ipynb
.claude/commands/: job.md  rsync-server.md
.github/workflows/: deploy-hf.yml
assets/: easy_scores.json  results.json  reward_grid.jsonl  train.jsonl
checkpoints/: eval_results.json
competition/: constraints.md  evaluation_criteria.md  requirements.md  timeline.md
data/: easy.json  hard.json  medium.json
data/easy/: 3.html
data/hard/: 1.html
data/tests/0/: expected_scores.json  meta.json
data/tests/1/: expected_scores.json  meta.json
data/tests/10/: expected_scores.json  meta.json  reference.html
data/tests/11/: expected_scores.json  meta.json
data/tests/12/: expected_scores.json  meta.json
data/tests/13/: expected_scores.json  meta.json
data/tests/14/: expected_scores.json  meta.json  reference.html
data/tests/2/: expected_scores.json  meta.json  (+1 more)
docs/: app.js  data.json  index.html  style.css
scripts/: build_qwen35_env.sh  eval_after_training.sh  generate_reward_grid.py  generate_site_data.py  generate_training_curve.py  job.sh  restore_env.sh  save_env.sh  test_rewards.py  vllm.sh  vllm_qwen35.sh
server/: app.py  environment.py
src/: __init__.py  agents.py  dataset.py  inference.py  prompts.py  train.py
src/server/: __init__.py  app.py  environment.py
tests/: conftest.py  test_reward_stability.py  test_rewards.py
utils/: generate_benchmark_images.py  rerender_hard.py
vcoder/: __init__.py  agents.py
vcoder/data/: __init__.py  dataset.py  websight.py
vcoder/rewards/: __init__.py  color_rewards.py  format_rewards.py  position_rewards.py  ssim_reward.py  structural_rewards.py  text_block_rewards.py  validity_rewards.py  visual_rewards.py
(+108 files in other folders)
